Corrected weather panel title spacing

--- a/sass/components/_weatherPanel.scss
+++ b/sass/components/_weatherPanel.scss
@@ -5,7 +5,7 @@
   text-align: center;
   align-items: center;
 
-  &__row {
+  &__main-title {
     margin-top: 1rem;
   }
 
