--- a/sass/main.css
+++ b/sass/main.css
@@ -150,7 +150,7 @@ body {
           align-items: center;
 }
 
-.weather-panel__row {
+.weather-panel__main-title {
   margin-top: 1rem;
 }
 
